logs/20260311_113426_test_tests.log
=== RUN: smart_microscope/test_tests.py ===
Timestamp: Wed 11 Mar 11:34:26 CDT 2026
PWD: /home/anita/pi_tests
Python: Python 3.11.2
Venv: /home/anita/pi_tests/.venv

--- SYSTEM BEFORE ---
 11:34:26 up  1:41,  2 users,  load average: 0.02, 0.20, 0.29
               total        used        free      shared  buff/cache   available
Mem:           3.7Gi       1.1Gi       2.0Gi        14Mi       723Mi       2.6Gi
Swap:          511Mi       508Mi       3.4Mi

--- RUNNING (/usr/bin/time -v gives peak RAM + CPU) ---
Total images found: 40
                                          image_path label  ... width height
0  /home/anita/pi_tests/smart_microscope/CytoLabe...     B  ...  1920   1080
1  /home/anita/pi_tests/smart_microscope/CytoLabe...     B  ...  1920   1080
2  /home/anita/pi_tests/smart_microscope/CytoLabe...     B  ...  1920   1080

[3 rows x 7 columns]
10X: 40 40X: 0
Test size: 8 Train size: 32
[INFO] Model Path: /home/anita/pi_tests/smart_microscope/models/best_model_Split_1.pt
Attempting to fetch cytofm model
Calling CytoFM (Adapter as nn.Module; engine loads backbone+ABMIL).
Traceback (most recent call last):
  File "/home/anita/pi_tests/smart_microscope/test_tests.py", line 58, in <module>
    results = test.test_model(
              ^^^^^^^^^^^^^^^^
  File "/home/anita/pi_tests/smart_microscope/test_data.py", line 464, in test_model
    model = ML_models.call_model(model_name)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/anita/pi_tests/smart_microscope/ML_models.py", line 184, in call_model
    return get_CytoFM_Adapter()
           ^^^^^^^^^^^^^^^^^^^^
  File "/home/anita/pi_tests/smart_microscope/ML_models.py", line 137, in get_CytoFM_Adapter
    return CytoFMAdapter()
           ^^^^^^^^^^^^^^^
  File "/home/anita/pi_tests/smart_microscope/ML_models.py", line 102, in __init__
    from smart_microscope.cytofm.cytofm_infer import CytoFMABMILInference
  File "/home/anita/pi_tests/smart_microscope/cytofm/cytofm_infer.py", line 119
    def predict(self, image_bgr):
IndentationError: unexpected unindent
Command exited with non-zero status 1
	Command being timed: "python smart_microscope/test_tests.py --model_name cytofm"
	User time (seconds): 9.92
	System time (seconds): 1.45
	Percent of CPU this job got: 75%
	Elapsed (wall clock) time (h:mm:ss or m:ss): 0:15.08
	Average shared text size (kbytes): 0
	Average unshared data size (kbytes): 0
	Average stack size (kbytes): 0
	Average total size (kbytes): 0
	Maximum resident set size (kbytes): 374240
	Average resident set size (kbytes): 0
	Major (requiring I/O) page faults: 288
	Minor (reclaiming a frame) page faults: 79838
	Voluntary context switches: 5229
	Involuntary context switches: 287
	Swaps: 0
	File system inputs: 171224
	File system outputs: 0
	Socket messages sent: 0
	Socket messages received: 0
	Signals delivered: 0
	Page size (bytes): 4096
	Exit status: 1
